src/objects/Contenedor_de_hito__c.object
<CustomObject>
    <fields>
        <fullName>Cuenta__c</fullName>
        <label>Cuenta</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Contenedor de hitos</relationshipLabel>
        <relationshipName>Contenedor_de_hitos</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Fecha_vencimiento_otros_servicios__c</fullName>
        <label>Fecha vencimiento otros servicios</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>vencimiento_datos_fijos__c</fullName>
        <label>vencimiento datos fijos</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>vencimiento_servicios_moviles__c</fullName>
        <label>vencimiento servicios moviles</label>
        <type>Date</type>
    </fields>
    <label>Contenedor de hito</label>
    <nameField>
        <label>Nombre de Contenedor de hito</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Contenedor de hitos</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>